[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scene/Script/RoomsMenu.gd" type="Script" id=1]
[ext_resource path="res://Sprite/New Piskel.png" type="Texture" id=2]
[ext_resource path="res://Sprite/New Piskel(1).png" type="Texture" id=3]

[node name="RoomsMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ItemList" type="ItemList" parent="Panel"]
margin_right = 355.0
margin_bottom = 201.0
max_columns = 4

[node name="AccueilButton" type="TextureButton" parent="Panel/ItemList"]
margin_left = 19.7835
margin_top = 33.7448
margin_right = 147.783
margin_bottom = 97.7448
rect_min_size = Vector2( 64, 32 )
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 2 )

[node name="MASButton" type="TextureButton" parent="Panel/ItemList"]
margin_left = 19.6397
margin_top = 90.7076
margin_right = 147.64
margin_bottom = 154.708
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="Panel/ItemList"]
margin_left = 103.875
margin_top = 43.4031
margin_right = 143.875
margin_bottom = 57.4031
text = "Accueil"

[node name="Label2" type="Label" parent="Panel/ItemList"]
margin_left = 89.2445
margin_top = 101.436
margin_right = 188.244
margin_bottom = 115.436
text = "Machine Ã  sous"

[node name="exit" type="Button" parent="Panel/ItemList"]
margin_left = 325.0
margin_top = 4.0
margin_right = 348.0
margin_bottom = 24.0
text = "X"

[node name="destroyRoom" type="TextureButton" parent="Panel/ItemList"]
margin_left = 32.108
margin_top = 153.729
margin_right = 160.108
margin_bottom = 217.729
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="Panel/ItemList/AccueilButton" to="." method="_on_AccueilButton_pressed"]
[connection signal="pressed" from="Panel/ItemList/MASButton" to="." method="_on_MASButton_pressed"]
[connection signal="pressed" from="Panel/ItemList/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/ItemList/destroyRoom" to="." method="_on_destroyRoom_pressed"]
